Task 0 - Armazém de itens